# radiator

./: .gitignore  BlueMidnightWish_opt.c  Dockerfile  Makefile.am  Makefile.am.orig  README.md  README.txt  api.cpp  bitcoin.cu  bitslice_transformations_quad.cu  build-arch.sh  build.sh  ccminer-config-win.h  ccminer-config.h  ccminer-cuda10.sln  ccminer-cuda10.vcxproj  ccminer-cuda80.sln  ccminer-cuda80.vcxproj  ccminer-cuda92.sln  ccminer-cuda92.vcxproj  ccminer.cpp  ccminer.vcxproj  ccminer.vcxproj.filters  configure.ac  configure.sh  cpuminer-config.h  cuda.cpp  cuda_bitcoin.cu  cuda_checkhash.cu  cuda_groestlcoin.cu  cuda_helper.h  cuda_helper.h.orig  cuda_myriadgroestl.cu  cuda_nist5.cu  cuda_novo.cu  cuda_rad.cu  cuda_vector.h  cuda_x11_aes_noasm.cu  elist.h  example-cfg.json  (+23 more)
Algo256/: blake256.cu  cuda_blake256.cu  cuda_bmw256.cu  cuda_cubehash256.cu  cuda_fugue256.cu  cuda_groestl256.cu  cuda_keccak256.cu  cuda_skein256.cu  keccak256.cu
JHA/: cuda_jha_compactionTest.cu  cuda_jha_keccak512.cu  jackpotcoin.cu
Sia/: cuda_sia.cu  sia.cpp  sia.cu  sia.h
bitcredit/: bitcredit.cu  cuda_bitcredit.cu
compat/: winansi.cpp  winansi.h
heavy/: cuda_blake512.cu  cuda_combine.cu  cuda_groestl512.cu  cuda_hefty1.cu  cuda_keccak512.cu  cuda_sha256.cu  heavy.cu  heavy.h
hive/: h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh
lyra2/: Lyra2.c  Lyra2.h  Sponge.h  cuda_lyra2.cu  cuda_lyra2_vectors.h  cuda_lyra2v2.cu  cuda_lyra2v2_sm3.cuh  cuda_lyra2v3.cu  cuda_lyra2v3_sm3.cuh  lyra2RE.cu  lyra2REv2.cpp  lyra2REv2.cu  lyra2REv3.cpp
neoscrypt/: cuda_neoscrypt.cu  cuda_neoscrypt.cu.orig  cuda_neoscrypt_tpruvot.cu  cuda_vector_tpruvot.cuh  neoscrypt.cpp  neoscrypt.cu  neoscrypt.cu.orig
quark/: animecoin.cu  cuda_bmw512.cu  cuda_jh512.cu  cuda_jh512keccak512.cu  cuda_quark_blake512.cu  cuda_quark_compactionTest.cu  cuda_quark_groestl512.cu  cuda_quark_keccak512.cu  cuda_skein512.cu  quarkcoin.cu
qubit/: deep.cu  doom.cpp  doom.cu  qubit.cpp  qubit.cu  qubit_luffa512.cu
scrypt/: blake.cu  keccak.cu
sph/: blake.c  bmw.c  cubehash.c  echo.c  fugue.c  groestl.c  hamsi.c  jh.c  keccak.c  luffa.c  md_helper.c  neoscrypt-cpu.cpp  neoscrypt.c  neoscrypt.cpp  sha2.c  sha2big.c  shabal.c  shavite.c  simd.c  skein.c  sph_sha2.h  sph_types.h  yescrypt-opt.c
x11/: c11.cpp  c11.cu  c11.cu.orig  cuda_x11_aes.cu  cuda_x11_cubehash512.cu  cuda_x11_echo.cu  cuda_x11_luffa512_Cubehash.cu  cuda_x11_shavite512.cu  cuda_x11_simd512.cu  fresh.cpp  (+7 more)
(+22 files in other folders)
